--- a/src/index.css
+++ b/src/index.css
@@ -337,13 +337,6 @@ button.ant-btn.ant-btn-primary.ant-input-search-button {
   color: black;
 }
 
-.icon-img {
-  width: 50px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  z-index: 1;
-}
-
 .ant-collapse {
   background-color: white;
   border: none;
@@ -382,7 +375,7 @@ div.ant-collapse-header {
 
 div.ant-collapse > .ant-collapse-item > .ant-collapse-header {
   padding: 5px 0px 5px 0px;
-  font-size: 1.5rem;
+  font-size: 0.6rem;
   text-align: left;
   margin-left: 15px;
   font-weight: 500;
@@ -391,9 +384,6 @@ div.ant-collapse > .ant-collapse-item > .ant-collapse-header {
 @media (max-width: 800px) {
   div.ant-collapse > .ant-collapse-item > .ant-collapse-header {
     font-size: 1.1rem;
-  }
-
-  div.ant-collapse > .ant-collapse-item > .ant-collapse-header {
     padding: 3px 0px 1px 0px;
     font-size: 0.9rem;
     text-align: left;
@@ -401,14 +391,6 @@ div.ant-collapse > .ant-collapse-item > .ant-collapse-header {
     font-weight: 500;
   }
 }
-.incident-location {
-  font-weight: lighter;
-}
-
-.incident-date {
-  font-weight: lighter;
-}
-
 .incident-container {
   display: flex;
   flex-direction: row;
